...
//

import UIKit

final class CredentialsView: UIView {

    private(set) var loginTextField = UITextField()
    private(set) var passwordTextField = UITextField()

    init() {
        super.init(frame: .zero)

        setupUI()
        layout()
...
