...
    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }

    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "ListView"

        viewModel.viewController = self

        setupUI()
        layout()
        setupActions()
...
